Navigation changes and some styling.

--- a/databases.html
+++ b/databases.html
@@ -1,32 +1,42 @@
 ---
 title: Databases
 layout: page
+hide_header: true
 permalink: /databases/
 ---
 
-<div class="flex">
-  <div class="w-75">
-    <h2>Catalogue of Research Databases</h2>
+<div class="databases-index">
+
+  <div class="fl w-75 pa2">
+    <h2 class="fw1">Catalogue of Research Databases</h2>
     <p class="text-muted">
       Below is a collection of the most useful public data sources for investigative reporting compiled by OCCRP's   researchers.
     </p>
   </div>
-  <div class="w-25">
+
+  <div class="fl w-25 pa2">
     Didn't find what you were looking for?
     Submit a research request
   </div>
-</div>
 
-<div class="flex">
-  <div class="flex flex-wrap w-75 databases-index">
+
+  <div class="fl w-75 pa2 regions-container">
+
+    <div class="db-nav">
+      <ul class="tabs">
+        {% for region in site.data.databases.location_data %}
+          {% assign region_data = region[1] %}
+          <li class="tab-link pv2 ph3 {% if forloop.first %} current {% endif %}" data-tab="tab-{{region[0]}}">
+            {{region_data.name}}
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+
     {% for region in site.data.databases.location_data %}
       {% assign region_data = region[1] %}
 
-      <input id="tab-{{region[0]}}" type="radio" name="region"
-        {% if forloop.first %} checked="checked" {% endif %}/>
-      <label for="tab-{{region[0]}}">{{region_data.name}}</label>
-
-      <div class="content">
+      <div id="tab-{{region[0]}}" class="pv3 tab-content {% if forloop.first %} current {% endif %}">
         {% for country in region_data.countries %}
           {% assign country_entries = site.data.databases.entries | where: 'country', country.code %}
           {% if country_entries.size > 0 %}
@@ -40,24 +50,31 @@ permalink: /databases/
         {% endfor %}
       </div>
     {% endfor %}
+
   </div>
 
-  <div class="w-25">
+  <div class="fl w-25 pa2 db-types-container">
 
-    <input id="db-types" type="radio" name="db-types" checked/>
-    <label for="db-types">Database types</label>
+    <div class="db-nav">
+      <ul class="tabs">
+        <li class="tab-link pv2 ph3 current">Database types</li>
+      </ul>
+    </div>
 
     {% assign db_type_entries = site.data.databases.entries | group_by: "db_type" | sort: "size" | reverse %}
 
-    {% for db_type_group in db_type_entries %}
-      {% assign db_type_obj = site.data.databases.database_types | where: 'shortname', db_type_group.name %}
+    <div class="tab-content pv3">
+      {% for db_type_group in db_type_entries %}
+        {% assign db_type_obj = site.data.databases.database_types | where: 'shortname', db_type_group.name %}
 
-      {% if db_type_group.name %}
-        <div class="database-item">
-          <a href="/databases/topics/{{db_type_group.name}}" class="link underline-hover">{{db_type_obj[0].name}}</a>
-          {{db_type_group.size}}
-        </div>
-      {% endif %}
-    {% endfor %}
+        {% if db_type_group.name %}
+          <div class="database-item">
+            <a href="/databases/topics/{{db_type_group.name}}" class="link underline-hover">{{db_type_obj[0].name}}</a>
+            {{db_type_group.size}}
+          </div>
+        {% endif %}
+      {% endfor %}
+    </div>
   </div>
+
 </div>
