Country name fixes.

--- a/collections/countries/BN.html
+++ b/collections/countries/BN.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in Brunei
+title: Databases in Brunei Darussalam
 layout: page
 permalink: /databases/countries/BN
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/BN
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in Brunei?
+      What are the best public information sources in Brunei Darussalam?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Supreme Court of Brunei Darussalam"
