--- a/collections/countries/CD.html
+++ b/collections/countries/CD.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in Democratic Republic of the Congo
+title: Databases in DR Congo
 layout: page
 permalink: /databases/countries/CD
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/CD
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in Democratic Republic of the Congo?
+      What are the best public information sources in DR Congo?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Guichet Unique de Création d'Entreprise"
