--- a/collections/countries/CG.html
+++ b/collections/countries/CG.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in Republic of the Congo
+title: Databases in Congo
 layout: page
 permalink: /databases/countries/CG
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/CG
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in Republic of the Congo?
+      What are the best public information sources in Congo?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Congo Statistics Agency"
