--- a/collections/countries/CI.html
+++ b/collections/countries/CI.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in Ivory Coast
+title: Databases in Côte D'ivoire
 layout: page
 permalink: /databases/countries/CI
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/CI
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in Ivory Coast?
+      What are the best public information sources in Côte D'ivoire?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Ivorian Office of Intellectual Property (OIPI)  Ministry for Industry and the Promotion of the Private Sector"
