--- a/collections/countries/CW.html
+++ b/collections/countries/CW.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in Curacao
+title: Databases in Curaçao
 layout: page
 permalink: /databases/countries/CW
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/CW
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in Curacao?
+      What are the best public information sources in Curaçao?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Chamber of Commerce and Industry"
