--- a/collections/countries/GW.html
+++ b/collections/countries/GW.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in Guinea-Bissau
+title: Databases in Guinea-bissau
 layout: page
 permalink: /databases/countries/GW
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/GW
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in Guinea-Bissau?
+      What are the best public information sources in Guinea-bissau?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Boletim Oficial da República da Guiné-Bissau"
