--- a/collections/countries/LA.html
+++ b/collections/countries/LA.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in Laos
+title: Databases in PDR Lao
 layout: page
 permalink: /databases/countries/LA
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/LA
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in Laos?
+      What are the best public information sources in PDR Lao?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Department of Intellectual Property, Ministry of Science and Technology"
