--- a/collections/countries/TL.html
+++ b/collections/countries/TL.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in East Timor
+title: Databases in Timor-leste
 layout: page
 permalink: /databases/countries/TL
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/TL
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in East Timor?
+      What are the best public information sources in Timor-leste?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="National Director of Human Rights and Citizenship  Ministry of Justice"
