--- a/collections/countries/VA.html
+++ b/collections/countries/VA.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in Vatican
+title: Databases in Holy See Vatican City State
 layout: page
 permalink: /databases/countries/VA
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/VA
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in Vatican?
+      What are the best public information sources in Holy See Vatican City State?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Judicial Office Central Offices"
