--- a/collections/countries/VG.html
+++ b/collections/countries/VG.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in British Virgin Islands
+title: Databases in Virgin Islands, British
 layout: page
 permalink: /databases/countries/VG
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/VG
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in British Virgin Islands?
+      What are the best public information sources in Virgin Islands, British?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Financial Services Commission"
