--- a/collections/countries/VI.html
+++ b/collections/countries/VI.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in U.S. Virgin Islands
+title: Databases in Virgin Islands, U.S.
 layout: page
 permalink: /databases/countries/VI
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/VI
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in U.S. Virgin Islands?
+      What are the best public information sources in Virgin Islands, U.S.?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Department of Licensing and Consumer Affairs"
