--- a/collections/topics/court.html
+++ b/collections/topics/court.html
@@ -212,7 +212,7 @@ permalink: /databases/topics/court
     %} 
 {% include db_type_entry.html
       agency="Supreme Court of Brunei Darussalam"
-      country_name="Brunei"
+      country_name="Brunei Darussalam"
       url="http://www.judicial.gov.bn/supr_court.htm"
       notes=""
       paid="f"
