--- a/collections/topics/gazette.html
+++ b/collections/topics/gazette.html
@@ -31,15 +31,6 @@ permalink: /databases/topics/gazette
       government_db="f"
     %} 
 {% include db_type_entry.html
-      agency="Virgin Islands Official Gazette"
-      country_name="British Virgin Islands"
-      url="http://bvigazette.org/"
-      notes="Available: with free account you can only download three latest issues of the gazette. Archived issues are available with a yearly subscription of USD 450. In terms of company information, the BVI Gazette only publishes notifications about liquidation of companies."
-      paid="t"
-      registration_required="t"
-      government_db="t"
-    %} 
-{% include db_type_entry.html
       agency="Official Gazette"
       country_name="Burkina Faso"
       url="http://ouidi.gov.bf/cgi-bin/sgg/library"
@@ -104,7 +95,7 @@ permalink: /databases/topics/gazette
     %} 
 {% include db_type_entry.html
       agency="Official Gazette"
-      country_name="Democratic Republic of the Congo"
+      country_name="DR Congo"
       url="http://www.leganet.cd/"
       notes="Free access to some official decisions regarding companies, public tenders, etc."
       paid="f"
@@ -176,7 +167,7 @@ permalink: /databases/topics/gazette
     %} 
 {% include db_type_entry.html
       agency="Boletim Oficial da República da Guiné-Bissau"
-      country_name="Guinea-Bissau"
+      country_name="Guinea-bissau"
       url="http://inacep-gb.org/"
       notes="Portuguese. 2008-2010."
       paid="f"
@@ -339,8 +330,8 @@ permalink: /databases/topics/gazette
 {% include db_type_entry.html
       agency="Boletín Oficial del Estado"
       country_name="Spain"
-      url="http://www.boe.es/diario_borme/"
-      notes="Available: the latest issuer of the official gazette"
+      url="http://www.boe.es/buscar/index.php?lang=en"
+      notes="Available: notifications about company changes"
       paid="f"
       registration_required="t"
       government_db="t"
@@ -348,8 +339,8 @@ permalink: /databases/topics/gazette
 {% include db_type_entry.html
       agency="Boletín Oficial del Estado"
       country_name="Spain"
-      url="http://www.boe.es/buscar/index.php?lang=en"
-      notes="Available: notifications about company changes"
+      url="http://www.boe.es/diario_borme/"
+      notes="Available: the latest issuer of the official gazette"
       paid="f"
       registration_required="t"
       government_db="t"
@@ -406,6 +397,15 @@ permalink: /databases/topics/gazette
       notes="Daily official gazete. Available: download."
       paid="f"
       registration_required="f"
+      government_db="t"
+    %} 
+{% include db_type_entry.html
+      agency="Virgin Islands Official Gazette"
+      country_name="Virgin Islands, British"
+      url="http://bvigazette.org/"
+      notes="Available: with free account you can only download three latest issues of the gazette. Archived issues are available with a yearly subscription of USD 450. In terms of company information, the BVI Gazette only publishes notifications about liquidation of companies."
+      paid="t"
+      registration_required="t"
       government_db="t"
     %} 
 </div>
