--- a/collections/topics/ip.html
+++ b/collections/topics/ip.html
@@ -239,7 +239,7 @@ permalink: /databases/topics/ip
     %} 
 {% include db_type_entry.html
       agency="Brunei Intellectual Property Office (BruIPO)  The Brunei Economic Development Board (BEDB)"
-      country_name="Brunei"
+      country_name="Brunei Darussalam"
       url="http://www.brunei-patents.com.bn/cgi-sys/suspendedpage.cgi"
       notes="Account of government suspended."
       paid="f"
@@ -355,6 +355,15 @@ permalink: /databases/topics/ip
       government_db="t"
     %} 
 {% include db_type_entry.html
+      agency="Ivorian Office of Intellectual Property (OIPI)  Ministry for Industry and the Promotion of the Private Sector"
+      country_name="Côte D'ivoire"
+      url="http://www.oipi.ci/cgi-sys/suspendedpage.cgi"
+      notes="Site currently down."
+      paid="f"
+      registration_required="f"
+      government_db="t"
+    %} 
+{% include db_type_entry.html
       agency="Danish Patent and Trademark Office  Ministry of Trade and Industry"
       country_name="Denmark"
       url="http://www.dkpto.org/"
@@ -376,15 +385,6 @@ permalink: /databases/topics/ip
       agency="National Office of Industrial Property (ONAPI)  State Secretariat for Industry and Commerce"
       country_name="Dominican Republic"
       url="http://onapi.gob.do/"
-      notes=""
-      paid="f"
-      registration_required="f"
-      government_db="t"
-    %} 
-{% include db_type_entry.html
-      agency="National Director of Human Rights and Citizenship  Ministry of Justice"
-      country_name="East Timor"
-      url="http://www.mj.gov.tl/"
       notes=""
       paid="f"
       registration_required="f"
@@ -526,6 +526,15 @@ permalink: /databases/topics/ip
       government_db="t"
     %} 
 {% include db_type_entry.html
+      agency="Judicial Office Central Offices"
+      country_name="Holy See Vatican City State"
+      url="http://www.vaticanstate.va/content/vaticanstate/fr.html"
+      notes=""
+      paid="f"
+      registration_required="f"
+      government_db="t"
+    %} 
+{% include db_type_entry.html
       agency="Directorate General of Intellectual Property (DIGEPIH)"
       country_name="Honduras"
       url="http://www.digepih.webs.com/"
@@ -616,15 +625,6 @@ permalink: /databases/topics/ip
       government_db="t"
     %} 
 {% include db_type_entry.html
-      agency="Ivorian Office of Intellectual Property (OIPI)  Ministry for Industry and the Promotion of the Private Sector"
-      country_name="Ivory Coast"
-      url="http://www.oipi.ci/cgi-sys/suspendedpage.cgi"
-      notes="Site currently down."
-      paid="f"
-      registration_required="f"
-      government_db="t"
-    %} 
-{% include db_type_entry.html
       agency="Jamaica Intellectual Property Office (JIPO)"
       country_name="Jamaica"
       url="http://www.jipo.gov.jm/"
@@ -673,15 +673,6 @@ permalink: /databases/topics/ip
       agency="State Service of Intellectual Property and Innovation under the Government of the Kyrgyz Republic (Kyrgyzpatent)"
       country_name="Kyrgyzstan"
       url="http://patent.kg/en"
-      notes="Website down."
-      paid="f"
-      registration_required="f"
-      government_db="t"
-    %} 
-{% include db_type_entry.html
-      agency="Department of Intellectual Property, Ministry of Science and Technology"
-      country_name="Laos"
-      url="http://www.stea.la.wipo.net/index.html"
       notes="Website down."
       paid="f"
       registration_required="f"
@@ -951,6 +942,15 @@ Tel: 230) 454 44 08"
       government_db="t"
     %} 
 {% include db_type_entry.html
+      agency="Department of Intellectual Property, Ministry of Science and Technology"
+      country_name="PDR Lao"
+      url="http://www.stea.la.wipo.net/index.html"
+      notes="Website down."
+      paid="f"
+      registration_required="f"
+      government_db="t"
+    %} 
+{% include db_type_entry.html
       agency="Intellectual Property Organization of Pakistan (IPO-Pakistan)"
       country_name="Pakistan"
       url="http://www.ipo.gov.pk/"
@@ -1033,7 +1033,7 @@ Tel: 230) 454 44 08"
     %} 
 {% include db_type_entry.html
       agency="Federal Service for Intellectual Property (ROSPATENT)"
-      country_name="Russia"
+      country_name="Russian Federation"
       url="http://www.rupto.ru/en_site/index_en.htm"
       notes=""
       paid="f"
@@ -1195,7 +1195,7 @@ Tel: 230) 454 44 08"
     %} 
 {% include db_type_entry.html
       agency="Directorate of Commercial and Industrial Property Protection (DCIP)"
-      country_name="Syria"
+      country_name="Syrian Arab Republic"
       url="http://www.spo.gov.sy/"
       notes=""
       paid="f"
@@ -1233,6 +1233,15 @@ Tel: 230) 454 44 08"
       agency="Department of Intellectual Property (DIP)  Ministry of Commerce"
       country_name="Thailand"
       url="http://www.ipthailand.go.th/ipthailand/index.php?lang=en"
+      notes=""
+      paid="f"
+      registration_required="f"
+      government_db="t"
+    %} 
+{% include db_type_entry.html
+      agency="National Director of Human Rights and Citizenship  Ministry of Justice"
+      country_name="Timor-leste"
+      url="http://www.mj.gov.tl/"
       notes=""
       paid="f"
       registration_required="f"
@@ -1341,15 +1350,6 @@ Tel: 230) 454 44 08"
       agency="Agency on Intellectual Property of the Republic of Uzbekistan"
       country_name="Uzbekistan"
       url="http://www.ima.uz/ru/"
-      notes=""
-      paid="f"
-      registration_required="f"
-      government_db="t"
-    %} 
-{% include db_type_entry.html
-      agency="Judicial Office Central Offices"
-      country_name="Vatican"
-      url="http://www.vaticanstate.va/content/vaticanstate/fr.html"
       notes=""
       paid="f"
       registration_required="f"
