--- a/databases.html
+++ b/databases.html
@@ -9,14 +9,14 @@ permalink: /databases/
 
   <div class="fl w-75 pv2">
     <h1 class="fw1 mt3 mb2">Catalogue of Research Databases</h1>
-    <p class="text-muted">
+    <p class="gray-mid">
       Below is a collection of the most useful public data sources for investigative reporting compiled by OCCRP's   researchers.
     </p>
   </div>
 
-  <div class="fl w-25 ph3 pv2 ba br2 submit-request-container">
-    <p>Didn't find what you were looking for?</p>
-    <a href="https://investigativedashboard.org/tickets/new" class="f6 link dim ph3 pv2 mb2 dib br2 white bg-red-id">
+  <div class="fl w-25 ph3 pv4 ba br2 submit-request-container">
+    <div class="mb3">Didn't find what you were looking for?</div>
+    <a href="https://investigativedashboard.org/tickets/new" class="link ph3 pv2 dib br2 white bg-red-id">
       <i class="fa fa-comments-o"></i>
       Submit a research request
     </a>
