--- a/collections/countries/RU.html
+++ b/collections/countries/RU.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in Russia
+title: Databases in Russian Federation
 layout: page
 permalink: /databases/countries/RU
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/RU
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in Russia?
+      What are the best public information sources in Russian Federation?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Enquiry Service of Legal Entities"
