--- a/collections/countries/SY.html
+++ b/collections/countries/SY.html
@@ -1,5 +1,5 @@
 ---
-title: Databases in Syria
+title: Databases in Syrian Arab Republic
 layout: page
 permalink: /databases/countries/SY
 ---
@@ -8,7 +8,7 @@ permalink: /databases/countries/SY
       External databases
     </h3>
     <div class="f4 pt2 pb4 gray-med">
-      What are the best public information sources in Syria?
+      What are the best public information sources in Syrian Arab Republic?
     </div>
     <div class="entries w-50">{% include country_entry.html
       agency="Damascus Securities Exchange"
